# storage

./: Cargo.toml  Dockerfile
src/: main.rs
src/application/: mod.rs  state.rs
src/application/services/: mod.rs  storage_service.rs
src/domain/: mod.rs  types.rs
src/domain/dto/: file.rs  mod.rs  path.rs
src/domain/interfaces/: mod.rs  service.rs  storage.rs
src/handlers/: delete.rs  error.rs  get_file.rs  mod.rs  put_file.rs
src/infrastructure/: minio.rs  mod.rs
