[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread", "rt", "macros"] }
rust-s3 = "0.35.1"
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
